<resources>
    <string name="app_name">EarthQuakes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="earthquakes_url">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.geojson</string>
    <string name="num_earthquakes">%d earthquakes processed</string>
    <string name="little_activity_settings">settings</string>
    <string name="earthquake_refresh">Refresh</string>
    <string name="earthquake_filters">Filters</string>
    <string name="PREF_AUTO_UPDATE">PREF_AUTO_UPDATE</string>
    <string name="auto_update_prompt">Auto update</string>
    <string name="auto_update_desc">auto_update_desc</string>
    <string name="PREF_UPDATE_INTERVAL">PREF_UPDATE_INTERVAL</string>
    <string name="PREF_MIN_MAG">PREF_MIN_MAG</string>
    <string name="UPDATE">UPDATE</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyDY2PpVIxhBL4zpLpW1cHc5jFHQAmJNyKE
    </string>

</resources>
