<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/earthquake_refresh">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/PREF_AUTO_UPDATE"
            android:summary="Update earthquakes automatically or not"
            android:title="@string/auto_update_prompt">
        </SwitchPreference>

        <ListPreference
            android:defaultValue="5"
            android:dependency="@string/PREF_AUTO_UPDATE"
            android:entries="@array/update_freq_entries"
            android:entryValues="@array/update_freq_values"
            android:key="@string/PREF_UPDATE_INTERVAL"
            android:summary="Frecuency at wich to refresh earthquake list"
            android:title="Update Frecuency">
        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/earthquake_filters">
        <ListPreference
            android:defaultValue="5"
            android:dependency="@string/PREF_AUTO_UPDATE"
            android:entries="@array/magnitude"
            android:entryValues="@array/magnitude_options"
            android:key="@string/PREF_MIN_MAG"
            android:summary="Select the minimum magnitude earthquake to report"
            android:title="Minimum Quake Magnitude">
        </ListPreference>
    </PreferenceCategory>




</PreferenceScreen>